Creating Receipt Info Fragment :

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,12 +36,12 @@
         android:layout_weight="1"
         android:text="Button" />
 
-    <LinearLayout
+    <FrameLayout
         class="com.example.karenli.budgetingapp.ReceiptFragment"
         android:id="@+id/receiptFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal" >
-    </LinearLayout>
+    </FrameLayout>
 
 </RelativeLayout>
