--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,9 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context="com.example.karenli.budgetingapp.HomeActivity">
+
+    <include layout="@layout/toolbar_app" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnAddReceipt"
@@ -27,21 +29,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible"
-        app:srcCompat="@mipmap/ic_launcher" />
-
-    <Button
-        android:id="@+id/btn_load"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Button" />
+        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_marginTop="61dp"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/receiptFragment"
+        android:layout_marginStart="18dp" />
 
     <FrameLayout
-        class="com.example.karenli.budgetingapp.ReceiptFragment"
         android:id="@+id/receiptFragment"
-        android:layout_width="match_parent"
+        class="com.example.karenli.budgetingapp.ReceiptFragment"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="horizontal" >
-    </FrameLayout>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:orientation="horizontal"></FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/viewReceiptsFragment"
+        class="com.example.karenli.budgetingapp.ViewReceiptsFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:orientation="horizontal"></FrameLayout>
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView1"
+        android:layout_marginTop="98dp"
+        android:layout_toStartOf="@+id/btnAddReceipt"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
 
 </RelativeLayout>
