--- a/app/src/main/res/layout/fragment_receiptinfo.xml
+++ b/app/src/main/res/layout/fragment_receiptinfo.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <EditText
         android:id="@+id/etName"
-        android:layout_width="match_parent"
+        android:layout_width="284dp"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:hint="@string/receiptinfo_name"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_marginTop="80dp" />
 
     <EditText
         android:id="@+id/etDescript"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/etName"
-        android:ems="10"
         android:hint="@string/receiptinfo_description"
         android:inputType="textShortMessage|textLongMessage" />
 
@@ -26,10 +22,6 @@
         android:id="@+id/etTotal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/etDescript"
-        android:ems="10"
         android:hint="@string/receiptinfo_total"
         android:inputType="numberDecimal" />
 
@@ -37,12 +29,6 @@
         android:id="@+id/btnSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/etTotal"
-        android:layout_marginEnd="36dp"
-        android:layout_marginRight="36dp"
-        android:layout_marginTop="30dp"
         android:text="@string/receiptinfo_submit" />
 
-</FrameLayout>
+</LinearLayout>
