Change to match_parent for fragment

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.example.karenli.budgetingapp.HomeActivity">
 
     <include layout="@layout/toolbar_app" />
@@ -38,7 +38,7 @@
     <FrameLayout
         android:id="@+id/receiptFragment"
         class="com.example.karenli.budgetingapp.ReceiptFragment"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -47,7 +47,7 @@
     <FrameLayout
         android:id="@+id/viewReceiptsFragment"
         class="com.example.karenli.budgetingapp.ViewReceiptsFragment"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
