--- a/app/src/main/res/layout/activity_receiptinfo.xml
+++ b/app/src/main/res/layout/activity_receiptinfo.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <include layout="@layout/toolbar_app" />
 
     <EditText
         android:id="@+id/etName"
-        android:layout_width="284dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/receiptinfo_name"
         android:inputType="textPersonName"
