--- a/app/src/main/res/layout/activity_view_receipts.xml
+++ b/app/src/main/res/layout/activity_view_receipts.xml
@@ -10,19 +10,21 @@
 
     <ListView
         android:id="@+id/lvReceipts"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
-
-    <FrameLayout
-        android:id="@+id/chosenReceiptsFragment"
-        class="com.example.karenli.budgetingapp.ChosenReceiptFragment"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:orientation="horizontal"></FrameLayout>
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="58dp" />
+
+    <ImageButton
+        android:id="@+id/imgBtn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="46dp"
+        android:backgroundTint="@android:color/darker_gray"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
 
 
 </RelativeLayout>
